Convert customer view cart and order tables to grid

--- a/src/PrestaShopBundle/Resources/config/services/core/grid/grid_definition_factory.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/grid_definition_factory.yml
@@ -86,6 +86,22 @@ services:
       - '@=service("request_stack").getCurrentRequest()'
     public: true
 
+  prestashop.core.grid.definition.factory.customer.cart:
+    class: 'PrestaShop\PrestaShop\Core\Grid\Definition\Factory\CustomerCartGridDefinitionFactory'
+    parent: 'prestashop.core.grid.definition.factory.abstract_grid_definition'
+    arguments:
+      - '@=service("request_stack").getCurrentRequest()'
+      - '@=service("prestashop.adapter.legacy.context").getContext().language.date_format_full'
+    public: true
+
+  prestashop.core.grid.definition.factory.customer.order:
+    class: 'PrestaShop\PrestaShop\Core\Grid\Definition\Factory\CustomerOrderGridDefinitionFactory'
+    parent: 'prestashop.core.grid.definition.factory.abstract_grid_definition'
+    arguments:
+      - '@=service("request_stack").getCurrentRequest()'
+      - '@=service("prestashop.adapter.legacy.context").getContext().language.date_format_full'
+    public: true
+
   prestashop.core.grid.definition.factory.language:
     class: 'PrestaShop\PrestaShop\Core\Grid\Definition\Factory\LanguageGridDefinitionFactory'
     parent: 'prestashop.core.grid.definition.factory.abstract_grid_definition'
