--- a/src/PrestaShopBundle/Resources/config/services/core/grid/doctrine_query_builder.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/doctrine_query_builder.yml
@@ -96,6 +96,24 @@ services:
       - '@=service("prestashop.adapter.shop.context").getContextListShopIDUsingCustomerSharingSettings()'
     public: true
 
+  prestashop.core.grid.query_builder.customer_cart:
+    class: 'PrestaShop\PrestaShop\Core\Grid\Query\CustomerCartQueryBuilder'
+    parent: 'prestashop.core.grid.abstract_query_builder'
+    arguments:
+      - '@prestashop.core.query.doctrine_search_criteria_applicator'
+      - "@=service('prestashop.adapter.legacy.context').getContext().language.id"
+      - '@=service("prestashop.adapter.shop.context").getContextListShopIDUsingCustomerSharingSettings()'
+    public: true
+
+  prestashop.core.grid.query_builder.customer_order:
+    class: 'PrestaShop\PrestaShop\Core\Grid\Query\CustomerOrderQueryBuilder'
+    parent: 'prestashop.core.grid.abstract_query_builder'
+    arguments:
+      - '@prestashop.core.query.doctrine_search_criteria_applicator'
+      - "@=service('prestashop.adapter.legacy.context').getContext().language.id"
+      - '@=service("prestashop.adapter.shop.context").getContextListShopIDUsingCustomerSharingSettings()'
+    public: true
+
   prestashop.core.grid.quer_.builder.language:
     class: 'PrestaShop\PrestaShop\Core\Grid\Query\LanguageQueryBuilder'
     parent: 'prestashop.core.grid.abstract_query_builder'
