--- a/src/PrestaShopBundle/Resources/config/services/core/grid/grid_data_factory.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/grid_data_factory.yml
@@ -106,10 +106,40 @@ services:
       - '@prestashop.core.grid.query.doctrine_query_parser'
       - 'customer_address'
 
+  prestashop.core.grid.data_provider.customer_cart:
+    class: '%prestashop.core.grid.data.factory.doctrine_grid_data_factory%'
+    arguments:
+      - '@prestashop.core.grid.query_builder.customer_cart'
+      - '@prestashop.core.hook.dispatcher'
+      - '@prestashop.core.grid.query.doctrine_query_parser'
+      - 'customer_cart'
+
+  prestashop.core.grid.data_provider.customer_order:
+    class: '%prestashop.core.grid.data.factory.doctrine_grid_data_factory%'
+    arguments:
+      - '@prestashop.core.grid.query_builder.customer_order'
+      - '@prestashop.core.hook.dispatcher'
+      - '@prestashop.core.grid.query.doctrine_query_parser'
+      - 'customer_order'
+
   prestashop.core.grid.data_provider.customer_address_decorator:
     class: 'PrestaShop\PrestaShop\Core\Grid\Data\Factory\CustomerAddressGridDataFactoryDecorator'
     arguments:
       - '@prestashop.core.grid.data_provider.customer_address'
+
+  prestashop.core.grid.data_provider.customer_cart_decorator:
+    class: 'PrestaShop\PrestaShop\Core\Grid\Data\Factory\CustomerAddressGridDataFactoryDecorator'
+    arguments:
+      - '@prestashop.core.grid.data_provider.customer_cart'
+      - "@prestashop.core.localization.locale.context_locale"
+      - "@=service('prestashop.adapter.legacy.context').getContext().currency.iso_code"
+
+  prestashop.core.grid.data_provider.customer_order_decorator:
+    class: 'PrestaShop\PrestaShop\Core\Grid\Data\Factory\CustomerAddressGridDataFactoryDecorator'
+    arguments:
+      - '@prestashop.core.grid.data_provider.customer_order'
+      - "@prestashop.core.localization.locale.context_locale"
+      - "@=service('prestashop.adapter.legacy.context').getContext().currency.iso_code"
 
   prestashop.core.grid.data.factory.language:
     class: '%prestashop.core.grid.data.factory.doctrine_grid_data_factory%'
