fix showing generate for all shops depending if multishop on

--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
@@ -1874,10 +1874,11 @@ services:
     tags:
       - { name: form.type }
 
-  form.type.sell.product.combination.combination_manager_type:
-    class: 'PrestaShopBundle\Form\Admin\Sell\Product\Combination\CombinationManagerType'
+  PrestaShopBundle\Form\Admin\Sell\Product\Combination\CombinationManagerType:
     parent: 'form.type.translatable.aware'
-    public: true
+    public: false
+    arguments:
+      - '@PrestaShop\PrestaShop\Adapter\Feature\MultistoreFeature'
     tags:
       - { name: form.type }
 
