--- a/src/PrestaShopBundle/Resources/config/services/adapter/product/_customization.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/product/_customization.yml
@@ -15,10 +15,8 @@ services:
     public: false
 
   PrestaShop\PrestaShop\Adapter\Product\Customization\Update\ProductCustomizationFieldUpdater:
-    arguments:
-      - '@PrestaShop\PrestaShop\Adapter\Product\Customization\Repository\CustomizationFieldRepository'
-      - '@PrestaShop\PrestaShop\Adapter\Product\Customization\Update\CustomizationFieldDeleter'
-      - '@PrestaShop\PrestaShop\Adapter\Product\Repository\ProductMultiShopRepository'
+    autowire: true
+    public: false
 
   PrestaShop\PrestaShop\Adapter\Product\Customization\QueryHandler\GetProductCustomizationFieldsHandler:
     arguments:
