--- a/src/PrestaShopBundle/Resources/config/services/bundle/controller.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/controller.yml
@@ -145,3 +145,11 @@ services:
       productRepository: '@PrestaShop\PrestaShop\Adapter\Product\Repository\ProductRepository'
     tags:
       - { name: !php/const PrestaShopBundle\Controller\Admin\FrameworkBundleAdminController::PRESTASHOP_CORE_CONTROLLERS_TAG }
+
+  PrestaShopBundle\Controller\Admin\Sell\Catalog\Product\ProductController:
+    parent: PrestaShopBundle\Controller\Admin\FrameworkBundleAdminController
+    public: true
+    properties:
+      productRepository: '@PrestaShop\PrestaShop\Adapter\Product\Repository\ProductRepository'
+    tags:
+      - { name: !php/const PrestaShopBundle\Controller\Admin\FrameworkBundleAdminController::PRESTASHOP_CORE_CONTROLLERS_TAG }
