--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
@@ -1840,6 +1840,7 @@ services:
     arguments:
       - '@prestashop.adapter.form.choice_provider.feature_values_choice_provider'
       - '@PrestaShopBundle\Form\FormCloner'
+      - '@translator'
     public: true
 
   PrestaShopBundle\Form\Admin\Sell\Product\EventListener\SpecificPriceCombinationListener:
