Cron PHP Update Modules : The option `--latest` doesn't exist

--- a/.github/workflows/cron_php_update_modules.yml
+++ b/.github/workflows/cron_php_update_modules.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Install Composer dependencies
         run: |
-          composer self-update --latest
+          composer self-update --stable
           composer install --prefer-dist
 
       - name: Execute script for updating modules
