CI : Added support to branch 8.1.x (and removed support to branch 1.7.8.x)

--- a/.github/workflows/cron_nightly_build.yml
+++ b/.github/workflows/cron_nightly_build.yml
@@ -26,6 +26,8 @@ jobs:
         include:
           - BRANCH: develop
             node: 16
+          - BRANCH: 8.1.x
+            node: 16
           - BRANCH: 8.0.x
             node: 16
           - BRANCH: 1.7.8.x
