--- a/.github/workflows/cron_nightly_tests_8.1.x.yml
+++ b/.github/workflows/cron_nightly_tests_8.1.x.yml
@@ -13,3 +13,6 @@ jobs:
     uses: ./.github/workflows/cron_nightly_tests_reusable.yml
     with:
       BRANCH: 8.1.x
+      GC_PROJECT_ID: ${{ secrets.GC_PROJECT_ID }}
+      GC_SERVICE_KEY: ${{ secrets.GC_SERVICE_KEY }}
+      API_NIGHTLY_IMPORT_TOKEN: ${{ secrets.NIGHTLY_TOKEN }}
