--- a/.github/workflows/cron_nightly_tests_8.0.x.yml
+++ b/.github/workflows/cron_nightly_tests_8.0.x.yml
@@ -13,6 +13,7 @@ jobs:
     uses: ./.github/workflows/cron_nightly_tests_reusable.yml
     with:
       BRANCH: 8.0.x
+    secrets:
       GC_PROJECT_ID: ${{ secrets.GC_PROJECT_ID }}
       GC_SERVICE_KEY: ${{ secrets.GC_SERVICE_KEY }}
       API_NIGHTLY_IMPORT_TOKEN: ${{ secrets.NIGHTLY_TOKEN }}
