--- a/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/product_v2/product.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/product_v2/product.yml
@@ -116,11 +116,11 @@ admin_products_v2_download_virtual_product_file:
   requirements:
     virtualProductFileId: \d+
 
-admin_products_v2_delete:
+admin_products_v2_delete_from_all_shops:
   path: /{productId}/delete
   methods: [ POST, DELETE ]
   defaults:
-    _controller: PrestaShopBundle\Controller\Admin\Sell\Catalog\Product\ProductController::deleteAction
+    _controller: PrestaShopBundle\Controller\Admin\Sell\Catalog\Product\ProductController::deleteFromAllShopsAction
     _legacy_controller: AdminProducts
     _legacy_link:
       - AdminProducts:delete
